# HRPG-Main

./: .gitignore  CMakeLists.txt  mcp3008_serial.c
ADS131M02_serial/: ADS131M02_serial.c  clock.pio
mcp3008_serial/: mcp3008_serial.c
pressure_test_wired/: pressure_test_wired.c
relay_test/: relay_test.c
